Added option for delete ticket
