# app/serializers/ticket_serializer.rb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class TicketSerializer < BaseSerializer
-  attributes :id, :title, :description, :category, :status, :maximum_permitted_time, :start_date, :end_date
+  attributes :id, :title, :ticket_no, :project_id, :description, :category, :status, :maximum_permitted_time, :start_date, :end_date
 
   attribute :assigned_user do |object|
     UserSerializer.new(object.assigned_user, fields: { user: [:name] })
